涵盖：00-账号管理 / 01-森林架构 / 02-多模型 / 03-本能模板 四篇文档的审计 + 全部缺口实现 + 文档同步